--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version":"0.1.0",
 	"author":"kristof1104",
 	"url":"https://github.com/kristof1104/CompetitorMod",
-	"description" : "A Mod for Game Dev Tycoon which Adds compeditors to the game",
+	"description" : "A Mod for Game Dev Tycoon which Adds competitors to the game",
 	"main" : "./CompetitorMod.js",
 	"dependencies" : {
 		"gdt-modAPI":"0.1.x"
