--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 ﻿{
-	"id" : "CompetitorMod-kristof1104",
-	"name" : "CompetitorMod by kristof1104",
-	"version":"0.1.0",
-	"author":"kristof1104",
+	"id" : "CompetitorMod-Kristof1104-DzjengisKhan",
+	"name" : "CompetitorMod",
+	"version":"0.1.1",
+	"author":"kristof1104 and DzjengisKhan",
 	"url":"https://github.com/kristof1104/CompetitorMod",
 	"description" : "A Mod for Game Dev Tycoon which Adds competitors to the game",
 	"main" : "./CompetitorMod.js",
